--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,15 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'NAPSTER_API_KEY', napsterApiKey
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -43,6 +52,9 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     testImplementation 'junit:junit:4.12'
 
