--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation "com.android.support:exifinterface:${versions.supportLibrary}"
 
     implementation "android.arch.persistence.room:runtime:${versions.room}"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:${versions.room}"
 
     implementation "android.arch.lifecycle:extensions:${versions.lifecycle}"
