--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,6 @@ buildscript {
             'test_runner'       : '1.0.2',
             'espresso'          : '3.0.2'
     ]
-    ext.names = [
-            'applicationId': 'io.plaidapp'
-    ]
 
     repositories {
         google()
@@ -47,6 +44,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:4.0.0'
     }
 }
 
