--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion configuration.compileSdk
@@ -86,12 +87,13 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
     implementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
 
+    implementation "com.google.firebase:firebase-core:${versions.firebase}"
+    implementation "com.crashlytics.sdk.android:crashlytics:${versions.crashlytics}"
+
     testImplementation "junit:junit:${versions.junit}"
 
     androidTestImplementation "com.android.support.test:runner:${versions.test_runner}"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:${versions.espresso}"
-
-    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
