--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ buildscript {
             'gson'              : '2.8.5',
             'retrofit'          : '2.4.0',
             'okhttp'            : '3.10.0',
+            'firebase'          : '16.0.1',
+            'crashlytics'       : '2.9.4',
             'junit'             : '4.12',
             'test_runner'       : '1.0.2',
             'espresso'          : '3.0.2'
@@ -41,10 +43,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.google.gms:google-services:4.0.0'
+        classpath 'io.fabric.tools:gradle:1.25.1'
     }
 }
 
@@ -52,6 +59,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
