--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion configuration.compileSdk
@@ -89,6 +90,7 @@ dependencies {
 
     implementation "com.google.firebase:firebase-core:${versions.firebase}"
     implementation "com.crashlytics.sdk.android:crashlytics:${versions.crashlytics}"
+    implementation "com.google.firebase:firebase-perf:${versions.performance}"
 
     testImplementation "junit:junit:${versions.junit}"
 
