--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ buildscript {
             'okhttp'            : '3.10.0',
             'firebase'          : '16.0.1',
             'crashlytics'       : '2.9.4',
+            'performance'       : '16.0.0',
             'junit'             : '4.12',
             'test_runner'       : '1.0.2',
             'espresso'          : '3.0.2'
@@ -52,6 +53,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.google.gms:google-services:4.0.0'
         classpath 'io.fabric.tools:gradle:1.25.1'
+        classpath 'com.google.firebase:firebase-plugins:1.1.5'
     }
 }
 
