--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".songs.SongsActivity"
+        <activity
+            android:name=".songs.SongsActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +34,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".song.SongActivity"
+        <activity
+            android:name=".song.SongActivity"
             android:parentActivityName=".songs.SongsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -44,6 +45,16 @@
         <service
             android:name=".songs.UpdateTopSongsIntentService"
             android:exported="false" />
+
+        <receiver android:name=".widget.FavoriteSongsWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favorite_songs_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
