--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "com.android.support:exifinterface:${versions.supportLibrary}"
 
     implementation "android.arch.persistence.room:runtime:${versions.room}"
+    implementation "android.arch.persistence.room:rxjava2:${versions.room}"
     annotationProcessor "android.arch.persistence.room:compiler:${versions.room}"
 
     implementation "android.arch.lifecycle:extensions:${versions.lifecycle}"
@@ -81,6 +82,9 @@ dependencies {
 
     implementation "com.jakewharton:butterknife:${versions.butterknife}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${versions.butterknife}"
+
+    implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
+    implementation "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}"
 
     implementation "com.google.code.gson:gson:${versions.gson}"
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
