--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ buildscript {
             'gson'              : '2.8.5',
             'retrofit'          : '2.4.0',
             'okhttp'            : '3.10.0',
+            'rxjava'            : '2.2.2',
+            'rxandroid'         : '2.1.0',
             'firebase'          : '16.0.3',
             'crashlytics'       : '2.9.5',
             'performance'       : '16.1.0',
