--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright 2018 Felipe Joglar Santos
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -25,7 +26,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".songs.SongsActivity"
+        <activity
+            android:name=".songs.SongsActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,16 +36,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".song.SongActivity"
+        <activity
+            android:name=".song.SongActivity"
             android:parentActivityName=".songs.SongsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".songs.SongsActivity" />
         </activity>
-
-        <service
-            android:name=".songs.UpdateTopSongsIntentService"
-            android:exported="false" />
     </application>
 
 </manifest>
