--- a/build.gradle
+++ b/build.gradle
@@ -24,20 +24,22 @@ buildscript {
     ]
 
     ext.versions = [
-            'supportLibrary'    : '28.0.0',
+            'appcompat'         : '1.0.2',
+            'supportLibrary'    : '1.0.0',
             'constraintLayout'  : '1.1.3',
+            'material'          : '1.0.0',
             'picasso'           : '2.71828',
-            'room'              : '1.1.1',
-            'lifecycle'         : '1.1.1',
-            'butterknife'       : '8.8.1',
+            'room'              : '2.0.0',
+            'lifecycle'         : '2.0.0',
+            'butterknife'       : '10.0.0',
             'gson'              : '2.8.5',
-            'retrofit'          : '2.4.0',
-            'okhttp'            : '3.10.0',
-            'rxjava'            : '2.2.2',
+            'retrofit'          : '2.5.0',
+            'okhttp'            : '3.12.1',
+            'rxjava'            : '2.2.6',
             'rxandroid'         : '2.1.0',
             'junit'             : '4.12',
-            'test_runner'       : '1.0.2',
-            'espresso'          : '3.0.2'
+            'test_runner'       : '1.1.0-alpha4',
+            'espresso'          : '3.1.0-alpha4'
     ]
 
     repositories {
