--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,16 +66,16 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
-    implementation "androidx.appcompat:appcompat:$versions.appcompat"
-    implementation "androidx.legacy:legacy-support-v4:$versions.supportLibrary"
-    implementation "androidx.constraintlayout:constraintlayout:$versions.constraintLayout"
+    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
+    implementation "androidx.legacy:legacy-support-v4:${versions.supportLibrary}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+    implementation "androidx.viewpager2:viewpager2:${versions.viewPager2}"
 
     implementation "com.google.android.material:material:$versions.material"
 
     implementation "com.github.bumptech.glide:glide:$versions.glide"
     annotationProcessor "com.github.bumptech.glide:compiler:$versions.glide"
 
-    implementation "androidx.room:room-runtime:$versions.room"
     implementation "androidx.room:room-rxjava2:$versions.room"
     annotationProcessor "androidx.room:room-compiler:$versions.room"
 
