--- a/build.gradle
+++ b/build.gradle
@@ -24,23 +24,24 @@ buildscript {
     ]
 
     ext.versions = [
-            'kotlin'          : '1.3.41',
+            'kotlin'          : '1.3.50',
             'appcompat'       : '1.1.0',
             'supportLibrary'  : '1.0.0',
-            'constraintLayout': '2.0.0-beta2',
-            'material'        : '1.1.0-alpha10',
-            'glide'           : '4.9.0',
+            'constraintLayout': '2.0.0-beta3',
+            'material'        : '1.2.0-alpha01',
+            'glide'           : '4.10.0',
             'lifecycle'       : '2.1.0',
-            'room'            : '2.1.0',
-            'butterknife'     : '10.1.0',
-            'gson'            : '2.8.5',
-            'retrofit'        : '2.5.0',
-            'okhttp'          : '3.14.0',
-            'rxjava'          : '2.2.7',
+            'room'            : '2.2.1',
+            'viewPager2'      : '1.0.0-rc01',
+            'butterknife'     : '10.2.0',
+            'gson'            : '2.8.6',
+            'retrofit'        : '2.6.2',
+            'okhttp'          : '4.2.2',
+            'rxjava'          : '2.2.13',
             'rxandroid'       : '2.1.1',
             'junit'           : '4.12',
-            'test_runner'     : '1.1.0-alpha4',
-            'espresso'        : '3.1.0-alpha4'
+            'test_runner'     : '1.3.0-alpha02',
+            'espresso'        : '3.3.0-alpha02'
     ]
 
     repositories {
@@ -49,7 +50,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
     }
 }
