--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Napster Api Key
 napsterApiKey = "your_napster_api_key_here"
+
+android.useAndroidX=true
+android.enableJetifier=true
