--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ buildscript {
     ext.versions = [
             'appcompat'       : '1.0.2',
             'supportLibrary'  : '1.0.0',
-            'constraintLayout': '1.1.3',
+            'constraintLayout': '2.0.0-beta2',
             'material'        : '1.0.0',
             'picasso'         : '2.71828',
             'room'            : '2.0.0',
@@ -48,7 +48,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
+        classpath 'com.android.tools.build:gradle:3.5.0-rc01'
     }
 }
 
