--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ buildscript {
             'supportLibrary'  : '1.0.0',
             'constraintLayout': '1.1.3',
             'material'        : '1.0.0',
-            'picasso'         : '2.71828',
+            'glide'           : '4.9.0',
             'room'            : '2.0.0',
             'lifecycle'       : '2.0.0',
             'butterknife'     : '10.1.0',
@@ -48,7 +48,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
+        classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
 
