--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
             'appcompat'       : '1.0.2',
             'supportLibrary'  : '1.0.0',
             'constraintLayout': '2.0.0-beta2',
-            'material'        : '1.0.0',
+            'material'        : '1.1.0-alpha10',
             'picasso'         : '2.71828',
             'room'            : '2.1.0',
             'lifecycle'       : '2.0.0',
