--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,13 @@ buildscript {
     ]
 
     ext.versions = [
-            'appcompat'       : '1.0.2',
+            'appcompat'       : '1.1.0',
             'supportLibrary'  : '1.0.0',
+            'constraintLayout': '2.0.0-beta2',
             'material'        : '1.1.0-alpha10',
             'glide'           : '4.9.0',
-            'lifecycle'       : '2.0.0',
+            'lifecycle'       : '2.1.0',
+            'room'            : '2.1.0',
             'butterknife'     : '10.1.0',
             'gson'            : '2.8.5',
             'retrofit'        : '2.5.0',
