--- a/build.gradle
+++ b/build.gradle
@@ -24,19 +24,19 @@ buildscript {
     ]
 
     ext.versions = [
-            'appcompat'       : '1.0.2',
+            'appcompat'       : '1.1.0',
             'supportLibrary'  : '1.0.0',
-            'constraintLayout': '1.1.3',
-            'material'        : '1.0.0',
+            'constraintLayout': '2.0.0-beta2',
+            'material'        : '1.1.0-alpha10',
             'glide'           : '4.9.0',
-            'room'            : '2.0.0',
-            'lifecycle'       : '2.0.0',
+            'lifecycle'       : '2.1.0',
+            'room'            : '2.1.0',
             'butterknife'     : '10.1.0',
             'gson'            : '2.8.5',
             'retrofit'        : '2.5.0',
             'okhttp'          : '3.14.0',
             'rxjava'          : '2.2.7',
-            'rxandroid'       : '2.1.0',
+            'rxandroid'       : '2.1.1',
             'junit'           : '4.12',
             'test_runner'     : '1.1.0-alpha4',
             'espresso'        : '3.1.0-alpha4'
