--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 /*
- * Copyright 2018 Felipe Joglar Santos
+ * Copyright 2019 Felipe Joglar Santos
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -34,7 +34,7 @@ buildscript {
             'room'            : '2.2.1',
             'viewPager2'      : '1.0.0-rc01',
             'butterknife'     : '10.2.0',
-            'gson'            : '2.8.6',
+            'moshi'           : '1.9.2',
             'retrofit'        : '2.6.2',
             'okhttp'          : '4.2.2',
             'rxjava'          : '2.2.13',
